--- a/src/App.scss
+++ b/src/App.scss
@@ -58,3 +58,64 @@ header {
   width: 100%;
   margin: 0 auto;
 }
+
+.form-name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15%;
+}
+
+.form-name {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.label-name {
+}
+
+.input-name {
+  border-radius: 15px;
+  height: 30px;
+  border: none;
+  box-shadow: 5px 6px 9px rgba(34, 73, 0, 0.12);
+  padding: 0 15px;
+}
+
+.form-name-button {
+  border-radius: 15px;
+  height: 30px;
+  width: 30%;
+  margin: auto;
+  border: none;
+  box-shadow: 5px 6px 9px rgba(34, 73, 0, 0.12);
+  color: #fff;
+  background-color: rgb(45, 45, 45);
+  transition: all 0.3s;
+}
+
+.form-name-button:hover {
+  background-color: #e05350;
+  height: 32px;
+  width: 32%;
+  transition: all 0.3s;
+}
+
+.icon3d {
+  position: absolute;
+  opacity: 0;
+  top: 10%;
+  left: 10%;
+  width: 15px;
+  animation: strobo 2s ease-in-out 2s infinite;
+}
+
+@keyframes strobo {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 80%;
+  }
+}
